syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/vadskev/chat-auth/pkg/user_v1;user_v1";

service UserV1{
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

enum UserRole {
  USER = 0;
  ADMIN = 1;
}

message CreateRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirmed = 4;
  UserRole role = 5;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  UserRole role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateRequest {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
  UserRole role = 4;
}

message UpdateResponse {
  google.protobuf.Empty update_response = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message DeleteResponse {
  google.protobuf.Empty delete_response = 1;
}